--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -14,6 +14,10 @@
   <body>
     <!-- for the desktop background -->
     <div class="bg">
+    <!-- loader-->
+      <div class="loader">
+        <span class="loader-side"></span>
+      </div>
       <!-- header -->
       <header>
         <div class="header">
