--- a/index.html
+++ b/index.html
@@ -5,3 +5,244 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Ohmyfood - OpenClassRooms</title>
+    <script
+      src="https://kit.fontawesome.com/04b5a3f05a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- for the desktop background -->
+    <div class="bg">
+    <!-- loader-->
+      <div class="loader">
+        <span class="loader-side"></span>
+      </div>
+      <!-- header -->
+      <header>
+        <div class="header">
+          <h1>
+            <img
+                    src="images/logo/ohmyfood.png"
+                    alt="logo ohmyfood" />
+          </h1>
+        </div>
+      </header>
+      <!-- main with location, presetation, steps and restaurants sections -->
+      <main>
+        <section class="section_location">
+          <h4><i class="fas fa-map-marker-alt"></i>&nbsp;Paris, Belleville</h4>
+        </section>
+        <!-- .sectionflex for the desktop -->
+        <div class="sectionflex">
+          <!-- section_presentation -->
+          <section class="section_presentation">
+            <h2 class="section_presentation__h2">
+              Réservez le menu qui vous convient
+            </h2>
+            <h4 class="section_presentation__h4">
+              Découvrez des restaurants d'exception, sélectionnés par nos soins.
+            </h4>
+            <button class="btn">Explorez nos restaurants</button>
+          </section>
+          <!-- section_steps -->
+          <section class="section_steps">
+            <h2>Fonctionnement</h2>
+            <div class="section_steps__btn">
+              <div class="section_steps__btn__ordered"><p>1</p></div>
+              <span>
+                <i class="fas fa-mobile-alt"></i>&nbsp;Choisissez votre
+                restaurant</span
+              >
+            </div>
+            <div class="section_steps__btn">
+              <div class="section_steps__btn__ordered"><p>2</p></div>
+              <span
+                ><i class="fas fa-list-ul"></i>&nbsp;Composez votre menu</span
+              >
+            </div>
+            <div class="section_steps__btn primary_bg">
+              <div class="section_steps__btn__ordered"><p>3</p></div>
+              <span
+                ><i class="fas fa-store"></i>&nbsp;Dégustez au restaurant</span
+              >
+            </div>
+          </section>
+        </div>
+        <!-- section_restaurants -->
+        <section class="section_restaurants">
+          <h2 class="section_restaurants__title">Restaurants</h2>
+          <div class="section_restaurant__cards">
+            <article class="section_restaurants__card card">
+              <a href="restaurants/palette.html">
+                <div class="section_restaurants__card__img card__img">
+                  <div
+                    class="section_restaurants__card__img__new card__img__new"
+                  >
+                    <p>Nouveau</p>
+                  </div>
+                  <img
+                    src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpeg"
+                    alt="La palette du goût"
+                  />
+                </div>
+                <div class="section_restaurants__card__caption card__caption">
+                  <div
+                    class="
+                      section_restaurants__card__caption__text
+                      card__caption__text
+                    "
+                  >
+                    <h4>La palette du goût</h4>
+                    <p>Ménilmontant</p>
+                  </div>
+                  <div
+                    class="
+                      section_restaurants__card__caption__hrt
+                      card__caption__hrt
+                    "
+                  >
+                    <p>
+                      <span class="fa-stack">
+                        <i class="far hrt-empty fa-heart fa-stack-1x"></i
+                        ><i class="fas fa-heart fa-stack-1x"></i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </article>
+            <article class="section_restaurants__card card">
+              <a href="restaurants/note.html">
+                <div class="section_restaurants__card__img card__img">
+                  <div
+                    class="section_restaurants__card__img__new card__img__new"
+                  >
+                    <p>Nouveau</p>
+                  </div>
+                  <img
+                    src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpeg"
+                    alt="La note enchantée"
+                  />
+                </div>
+                <div class="section_restaurants__card__caption card__caption">
+                  <div
+                    class="
+                      section_restaurants__card__caption__text
+                      card__caption__text
+                    "
+                  >
+                    <h4>La note enchantée</h4>
+                    <p>Charonne</p>
+                  </div>
+                  <div
+                    class="
+                      section_restaurants__card__caption__hrt
+                      card__caption__hrt
+                    "
+                  >
+                    <p>
+                      <span class="fa-stack">
+                        <i class="far hrt-empty fa-heart fa-stack-1x"></i
+                        ><i class="fas fa-heart fa-stack-1x"></i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </article>
+            <article class="section_restaurants__card card">
+              <a href="restaurants/francaise.html">
+                <div class="section_restaurants__card__img card__img">
+                  <img
+                    src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpeg"
+                    alt="À la française"
+                  />
+                </div>
+                <div class="section_restaurants__card__caption card__caption">
+                  <div
+                    class="
+                      section_restaurants__card__caption__text
+                      card__caption__text
+                    "
+                  >
+                    <h4>À la française</h4>
+                    <p>Cité Rouge</p>
+                  </div>
+                  <div
+                    class="
+                      section_restaurants__card__caption__hrt
+                      card__caption__hrt
+                    "
+                  >
+                    <p>
+                      <span class="fa-stack">
+                        <i class="far hrt-empty fa-heart fa-stack-1x"></i
+                        ><i class="fas fa-heart fa-stack-1x"></i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </article>
+            <article class="section_restaurants__card card">
+              <a href="restaurants/delice.html">
+                <div class="section_restaurants__card__img card__img">
+                  <img
+                    src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpeg"
+                    alt="Le délice des sens"
+                  />
+                </div>
+                <div class="section_restaurants__card__caption card__caption">
+                  <div
+                    class="
+                      section_restaurants__card__caption__text
+                      card__caption__text
+                    "
+                  >
+                    <h4>Le délice des sens</h4>
+                    <p>Folie-Méricourt</p>
+                  </div>
+                  <div
+                    class="
+                      section_restaurants__card__caption__hrt
+                      card__caption__hrt
+                    "
+                  >
+                    <p>
+                      <span class="fa-stack">
+                        <i class="far hrt-empty fa-heart fa-stack-1x"></i
+                        ><i class="fas fa-heart fa-stack-1x"></i>
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </article>
+          </div>
+        </section>
+      </main>
+      <!-- footer  -->
+      <footer class="footer">
+        <h5 class="footer_h5">ohmyfood</h5>
+        <p class="footer_p">
+          <i class="fas fa-utensils"></i>&nbsp;Proposer un restaurant
+        </p>
+        <p class="footer_p">
+          <i class="fas fa-hands-helping"></i>&nbsp;Devenir partenaire
+        </p>
+        <p class="footer_p">Mentions légales</p>
+        <p class="footer_p"><a href="mailto:ohmyfood@batmazzotti.fr">Contact</a></p>
+      </footer>
+    </div>
+  </body>
+</html>
